[gd_scene load_steps=3 format=3 uid="uid://c3e9f6g2h4i5j"]

[ext_resource type="Script" path="res://scripts/Tower.gd" id="1_1x2yh"]
[ext_resource type="Texture2D" uid="uid://jjt8j4rw3m3x" path="res://assets/ufoBlue.png" id="2_1x2yh"]

[node name="Tower" type="Area2D"]
script = ExtResource("1_1x2yh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1x2yh")
scale = Vector2(0.6, 0.6)

[node name="ClickArea" type="CollisionShape2D" parent="."]

[node name="Range" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="Range"]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true